--- a/src/com/br/uepb/bsc7/www/UI/InventarioUI.form
+++ b/src/com/br/uepb/bsc7/www/UI/InventarioUI.form
@@ -48,7 +48,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="grupoAbas" min="-2" pref="304" max="-2" attributes="0"/>
+              <Component id="grupoAbas" min="-2" pref="347" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="botBkp" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
@@ -110,7 +110,7 @@
                           <Component id="jPanel11" max="32767" attributes="0"/>
                           <Component id="painelLogin" pref="0" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="111" max="32767" attributes="0"/>
+                      <EmptySpace pref="154" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -304,11 +304,20 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="painelCargArqAcervo" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="painelLeCodAcervo" min="-2" pref="463" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Component id="botExcLinha" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="botRecpLinha" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" attributes="0">
+                              <Component id="painelCargArqAcervo" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="painelLeCodAcervo" min="-2" pref="463" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
                       <EmptySpace pref="53" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -321,7 +330,12 @@
                           <Component id="painelCargArqAcervo" pref="255" max="32767" attributes="0"/>
                           <Component id="painelLeCodAcervo" min="-2" pref="255" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="0" pref="9" max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="botExcLinha" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="botRecpLinha" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="20" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -647,6 +661,30 @@
                 </Component>
               </SubComponents>
             </Container>
+            <Component class="javax.swing.JToggleButton" name="botExcLinha">
+              <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/com/br/uepb/bsc7/www/images/icon_excluir.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Excluir linha"/>
+                <Property name="toolTipText" type="java.lang.String" value="Exclui linha espec&#xed;fica dentre os registros lidos"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botExcLinhaActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JToggleButton" name="botRecpLinha">
+              <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/com/br/uepb/bsc7/www/images/icon_recuperar.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Recuperar linha"/>
+                <Property name="toolTipText" type="java.lang.String" value="Exclui linha espec&#xed;fica dentre os registros lidos"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botRecpLinhaActionPerformed"/>
+              </Events>
+            </Component>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="abaSIABI">
@@ -685,7 +723,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="painelCargArqSIABI" pref="264" max="32767" attributes="0"/>
+                      <Component id="painelCargArqSIABI" pref="307" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
@@ -860,7 +898,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jPanel9" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="216" max="32767" attributes="0"/>
+                      <EmptySpace pref="259" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -916,13 +954,15 @@
                 <Component class="javax.swing.JComboBox" name="comboRelat">
                   <Properties>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                      <StringArray count="6">
+                      <StringArray count="8">
                         <StringItem index="0" value="Itens localizados na estante"/>
                         <StringItem index="1" value="Itens n&#xe3;o localizados na estante"/>
                         <StringItem index="2" value="Itens n&#xe3;o cadastrados no SIABI"/>
                         <StringItem index="3" value="Itens localizados na estante tidos como emprestados"/>
                         <StringItem index="4" value="Itens marcados para verifica&#xe7;&#xe3;o"/>
-                        <StringItem index="5" value="Todos itens lidos no invent&#xe1;rio"/>
+                        <StringItem index="5" value="Itens lidos no invent&#xe1;rio e posteriormente exclu&#xed;dos"/>
+                        <StringItem index="6" value="Todos itens lidos no invent&#xe1;rio"/>
+                        <StringItem index="7" value="Todos itens lidos no invent&#xe1;rio (para fins de backup)"/>
                       </StringArray>
                     </Property>
                     <Property name="toolTipText" type="java.lang.String" value="Selecione o relat&#xf3;rio a ser gerado"/>
@@ -955,7 +995,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="panelRest" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="527" max="32767" attributes="0"/>
+                      <EmptySpace pref="541" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -964,7 +1004,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="panelRest" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="181" max="32767" attributes="0"/>
+                      <EmptySpace pref="206" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -976,12 +1016,12 @@
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <EmptySpace max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="2" attributes="0">
                               <Component id="botRestFab" alignment="2" min="-2" max="-2" attributes="0"/>
                               <Component id="botRestBkp" alignment="2" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -990,9 +1030,9 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="botRestBkp" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="botRestFab" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="25" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -1012,7 +1052,11 @@
                 </Component>
                 <Component class="javax.swing.JToggleButton" name="botRestFab">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Restaurar padr&#xe3;o de f&#xe1;brica"/>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/com/br/uepb/bsc7/www/images/icon_limpa_bd.gif"/>
+                    </Property>
+                    <Property name="text" type="java.lang.String" value="Limpar base de dados"/>
+                    <Property name="toolTipText" type="java.lang.String" value="Exclui todos os valores inseridos no banco de dados"/>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botRestFabActionPerformed"/>
