--- a/src/com/br/uepb/bsc7/www/UI/InventarioUI.form
+++ b/src/com/br/uepb/bsc7/www/UI/InventarioUI.form
@@ -311,6 +311,8 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Group type="102" attributes="0">
+                              <Component id="botEdit" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                               <Component id="botPesq" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="botExcLinha" min="-2" max="-2" attributes="0"/>
@@ -340,6 +342,7 @@
                           <Component id="botExcLinha" alignment="2" min="-2" max="-2" attributes="0"/>
                           <Component id="botRecpLinha" alignment="2" min="-2" max="-2" attributes="0"/>
                           <Component id="botPesq" alignment="2" min="-2" max="-2" attributes="0"/>
+                          <Component id="botEdit" alignment="2" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="20" max="32767" attributes="0"/>
                   </Group>
@@ -710,6 +713,19 @@
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botPesqActionPerformed"/>
                 <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="botPesqKeyPressed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="botEdit">
+              <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/com/br/uepb/bsc7/www/images/icon_pesquisar.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Editar registros"/>
+                <Property name="toolTipText" type="java.lang.String" value="Insere o valor acima na tabela"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botEditActionPerformed"/>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="botEditKeyPressed"/>
               </Events>
             </Component>
           </SubComponents>
