--- a/src/com/br/uepb/bsc7/www/UI/PesquisaBD.form
+++ b/src/com/br/uepb/bsc7/www/UI/PesquisaBD.form
@@ -146,17 +146,24 @@
         <Component class="javax.swing.JTextField" name="textFieldSeq">
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textFieldSeqActionPerformed"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textFieldSeqKeyPressed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="textFieldCod">
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textFieldCodKeyPressed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="textFieldObs">
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textFieldObsKeyPressed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
     <Component class="javax.swing.JButton" name="botPesq">
       <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor" postCode="botPesq.setMnemonic(KeyEvent.VK_P);">
           <Image iconType="3" name="/com/br/uepb/bsc7/www/images/icon_pesquisar.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Pesquisar"/>
